force-app/main/default/objects/Account/fields/Allow_Quick_Search__c.field-meta.xml
<CustomField>
    <fullName>Allow_Quick_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>允许快速搜索</label>
    <type>Checkbox</type>
</CustomField>