force-app/main/default/objects/Account/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>是否需要内部审批</label>
    <type>Checkbox</type>
</CustomField>