force-app/main/default/objects/Account/fields/Business_Units__c.field-meta.xml
<CustomField>
    <fullName>Business_Units__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>业务部门</label>
    <length>255</length>
    <type>Text</type>
</CustomField>