force-app/main/default/objects/Account/fields/Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>客户编码</label>
    <length>255</length>
    <type>Text</type>
</CustomField>