force-app/main/default/objects/Account/fields/Custom_Filter_Config__c.field-meta.xml
<CustomField>
    <fullName>Custom_Filter_Config__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>附加筛选字段配置</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>