force-app/main/default/objects/Account/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>发件域名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>