force-app/main/default/objects/Account/fields/Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>客户通知邮箱</label>
    <type>Email</type>
</CustomField>