force-app/main/default/objects/Account/fields/Onboarding_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Cycle__c</fullName>
    <description>System-maintained current onboarding cycle number for the Account.</description>
    <inlineHelpText>System-controlled current onboarding cycle. Only approved Start Onboarding automation may increment this value.</inlineHelpText>
    <label>Onboarding Cycle</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>