force-app/main/default/objects/Account/fields/Reminder_Review_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Review_Period_Days__c</fullName>
    <label>提醒复核周期(天)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>