force-app/main/default/objects/Account/fields/SLA_Days__c.field-meta.xml
<CustomField>
    <fullName>SLA_Days__c</fullName>
    <label>SLA天数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>