force-app/main/default/objects/Account/fields/Time_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Service__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>服务时间</label>
    <type>Date</type>
</CustomField>