force-app/main/default/objects/Account/fields/Workflow_Customization_Notes__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Customization_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>工作流定制说明</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>